sjengida/c3/display_board
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:810:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 11))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:812:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 10))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:814:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 9))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:816:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 8))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:818:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 7))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:820:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 6))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:822:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 5))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:824:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 4))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:826:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 3))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:828:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 2))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:830:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( v6 - 1))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:832:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *v6)); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:848:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719408))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:850:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719404))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:852:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719400))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:854:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719396))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:856:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719392))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:858:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719388))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:860:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719384))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:862:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719380))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:864:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719376))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:866:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719372))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:868:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719368))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/utils.c:870:46: error: use of undeclared identifier 'off_41F880'
fprintf( stream, " %s |", ( const char *)*( &off_41F880 + *( int *)( v3 + 6719364))); 
                                             ^
24 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/display_board/src/obj/utils.o] Error 1
